Fixed: wflow-core - Universal Theme - Form header does not show correctly in light scheme. @6.0-SNAPSHOT Fixed: wflow-core - Universal Theme - Big gap in embed mode. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/light.less
+++ b/wflow-consoleweb/src/main/webapp/universal/css/light.less
@@ -186,7 +186,7 @@ main .dataList .pagelinks .pc.last-disabled{
     background-color: rgba(0,0,0,.1);
 }
 div[class*="-body-content"] div[class*="-body-header"] {
-    color: @defaultFontColor;
+    color: @fontColor;
 }
 main .jqplot-highlighter-tooltip, main .jqplot-canvasOverlay-tooltip {
     color: #000;
